# terminal-bench

./: registry.json
adapters/pixiu/: README.md  adapter.py  parity_experiment.json  pyproject.toml  run_adapter.py
adapters/pixiu-fpb/: README.md  SETUP_INSTRUCTIONS.md  adapter.py  parity_experiment.json  pyproject.toml  run_adapter.py
adapters/pixiu-fpb/template/: task.yaml
adapters/pixiu/template/: solution.sh  task.yaml
adapters/pixiu/template/tests/: test_outputs.py
