[project]
name = "pixiu-fpb-adapter"
version = "0.1.0"
description = "Terminal-Bench adapter for PIXIU Financial PhraseBank (FPB)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets==4.4.1",
    "tqdm>=4.66.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

